--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Sitio web 1</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
@@ -21,6 +21,20 @@
   </div>
   <h1 class="title-style">Titulo 1</h1>
   <h1 class="title-style">Titulo 2</h1>
+  <div class="row">
+    <div class="col">
+      <img src="https://i.picsum.photos/id/1004/200/300.jpg?hmac=U8xLjv1wDsnhRH90oqnEvk2hvspq7UPzpU8Z9TtIxZM" alt="">
+    </div>
+      <div class="col">
+      <img src="https://i.picsum.photos/id/1004/200/300.jpg?hmac=U8xLjv1wDsnhRH90oqnEvk2hvspq7UPzpU8Z9TtIxZM" alt="">
+    </div>
+      <div class="col">
+      <img src="https://i.picsum.photos/id/1004/200/300.jpg?hmac=U8xLjv1wDsnhRH90oqnEvk2hvspq7UPzpU8Z9TtIxZM" alt="">
+    </div>
+      <div class="col">
+      <img src="https://i.picsum.photos/id/1004/200/300.jpg?hmac=U8xLjv1wDsnhRH90oqnEvk2hvspq7UPzpU8Z9TtIxZM" alt="">
+    </div>
+  </div>
 </body>
 </html>
 <!-- partial -->
